Added some of the basic code behind the skyline problem. Intending on touching up the skyline problem tomorrow

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
+# specific files
 .vscode
-node_modules/
 *.out
 .DS_Store
 tsconfig.json
 package.json
+
+# standard npx ciles
+logo.svg
+reportWebVitals.js
+setupTests.js
+
+# folders 
+node_modules/
+public/
